fixed overflow issue

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,10 +3,9 @@
 
 @import "{{ site.theme }}";
 .main-content {
-  max-width: 60rem;
-  padding: 2rem;
-  margin: 0 auto;
-  font-size: 1.1rem;
+    padding: 0;
+    margin: 0 auto;
+    font-size: 1.1rem;
 }
 
 .accordion-item {
